RtspServerApp: Verify that SunEC provider is available